# backend/controllers/employeeworkinghours_controller.go
@@ -15,7 +15,9 @@ import (
 )
 
 type EmployeeWorkingHours struct {
-	
+	IDEmployee	string
+	IDNumber	string
+	Wages		float64
 	Employee 	int
 	Day     	int
 	Role	  	int
@@ -98,17 +100,24 @@ func (ctl *EmployeeWorkingHoursController) CreateEmployeeWorkingHours(c *gin.Con
 
 	e, err := ctl.client.EmployeeWorkingHours.
 		Create().
+		SetIDEmployee(obj.IDEmployee).
+		SetIDNumber(obj.IDNumber).
+		SetWages(obj.Wages).
 		SetEmployee(em).
 		SetDay(d).
 		SetRole(r).
 		SetShift(sh).
 		Save(context.Background())
+
 	if err != nil {
+		fmt.Println(err)
 		c.JSON(400, gin.H{
-			"error": "saving failed",
+			"status" : false,
+			"error": err,
 		})
 		return
 	}
+
 	c.JSON(200, gin.H{
 		"status": true,
 		"data"  :   e,
